# causal_set_theory

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: deploy-docs.yml  push.yml
causal_set_paper/: Aug-version.bbl  Aug-version.tex  spbasic.bst
causal_set_paper/txt_chapters/: 01_overview.txt  02_historical_perspective.txt  03_causal_set_hypothesis.txt  04_kinematics_or_geometric_reconstruction.txt  05_matter_on_a_continuum_like_causal_set.txt  06_dynamics.txt  07_phenomenology_and_outlook.txt  08_notation_and_terminology.txt
docs/: _config.yml  _toc.yml  conf.py  index.md  requirements.txt
docs/source/chapters/: chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md
docs/source/notebooks/: action.ipynb  causal_sets.ipynb  chapter_5.ipynb  green_functions.ipynb
docs/source/project/: CHANGELOG.md  CONTRIBUTING.md  summary.md
docs/source/questions/: electromagnetism.md
src/: action.py  causal_sets.py  green_functions.py  notebook.py
src/causet/: core.py  kerr.py
tests/: test_core.py  test_kerr.py
