[project]
name = "causalset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "seaborn>=0.13.2",
    "autoapi",
    "jupyter-book",
    "sphinx",
    "linkify-it-py",
    "myst-parser",
    "myst-nb",
    "ruyaml",
    "sphinx-autoapi",
    "pydata-sphinx-theme",
    "sphinx-autodoc2",
    "sphinxcontrib-mermaid",
    "sphinx_book_theme",
    "sphinx_rtd_theme",
    "jupyter-cache",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinxext-opengraph",
    "sphinxcontrib-bibtex",
    "scipy>=1.16.0",
    "networkx>=3.5",
    "bokeh>=3.7.3",
    "holoviews>=1.21.0",
    "hvplot>=0.11.3",
    "python-louvain>=0.16",
]
